--- a/SupportBank/SupportBank.csproj
+++ b/SupportBank/SupportBank.csproj
@@ -5,4 +5,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Transactions2014.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
