--- a/SupportBank/SupportBank.csproj
+++ b/SupportBank/SupportBank.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="15.0.7" />
+    <PackageReference Include="CsvHelper" Version="15.0.8" />
+    <PackageReference Include="NLog" Version="4.7.5" />
   </ItemGroup>
 
   <ItemGroup>
