--- a/SupportBank/SupportBank.csproj
+++ b/SupportBank/SupportBank.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="DodgyTransactions2015.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Transactions2014.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
